--- a/sw/.cproject
+++ b/sw/.cproject
@@ -46,9 +46,9 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/uw_display/inc}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/uw_display/CMSIS_CORE_LPC177x_8x/inc}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/uw_display/CMSIS_DSPLIB_CM3/inc}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/uw_display/hal/uw_hal/inc}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/uw_display/hal/uw_hal/freertos/include}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/uw_display/hal/uw_hal/freertos/portable/GCC/ARM_CM3}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/uw_display/hal/uv_hal/inc}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/uw_display/hal/uv_hal/freertos/include}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/uw_display/hal/uv_hal/freertos/portable/GCC/ARM_CM3}&quot;"/>
 								</option>
 								<option id="com.crt.advproject.gcc.exe.debug.option.optimization.level.1462015691" name="Optimization Level" superClass="com.crt.advproject.gcc.exe.debug.option.optimization.level" value="gnu.c.optimization.level.size" valueType="enumerated"/>
 								<inputType id="com.crt.advproject.compiler.input.97094434" superClass="com.crt.advproject.compiler.input"/>
@@ -210,54 +210,54 @@
 &lt;memory can_program="true" id="Flash" is_ro="true" type="Flash"/&gt;
 &lt;memory id="RAM" type="RAM"/&gt;
 &lt;memory id="Periph" is_volatile="true" type="Peripheral"/&gt;
-&lt;memoryInstance derived_from="Flash" id="MFlash256" location="0x0" size="0x40000"/&gt;
-&lt;memoryInstance derived_from="RAM" id="RamLoc64" location="0x10000000" size="0x10000"/&gt;
+&lt;memoryInstance derived_from="Flash" edited="true" id="MFlash256" location="0x2000" size="0x3e000"/&gt;
+&lt;memoryInstance derived_from="RAM" edited="true" id="RamLoc64" location="0x10000000" size="0xff60"/&gt;
 &lt;memoryInstance derived_from="RAM" id="RamPeriph16" location="0x20000000" size="0x4000"/&gt;
 &lt;prog_flash blocksz="0x1000" location="0x0" maxprgbuff="0x1000" progwithcode="TRUE" size="0x10000"/&gt;
 &lt;prog_flash blocksz="0x8000" location="0x10000" maxprgbuff="0x1000" progwithcode="TRUE" size="0x30000"/&gt;
-&lt;peripheralInstance derived_from="V7M_MPU" determined="infoFile" id="MPU" location="0xe000ed90"/&gt;
-&lt;peripheralInstance derived_from="V7M_NVIC" determined="infoFile" id="NVIC" location="0xe000e000"/&gt;
-&lt;peripheralInstance derived_from="V7M_DCR" determined="infoFile" id="DCR" location="0xe000edf0"/&gt;
-&lt;peripheralInstance derived_from="V7M_ITM" determined="infoFile" id="ITM" location="0xe0000000"/&gt;
-&lt;peripheralInstance derived_from="FLASHCTRL" determined="infoFile" id="FLASHCTRL" location="0x200000"/&gt;
-&lt;peripheralInstance derived_from="GPDMA" determined="infoFile" id="GPDMA" location="0x20080000"/&gt;
-&lt;peripheralInstance derived_from="LCD" determined="infoFile" id="LCD" location="0x20088000"/&gt;
-&lt;peripheralInstance derived_from="USB" determined="infoFile" id="USB" location="0x2008c000"/&gt;
-&lt;peripheralInstance derived_from="CRC" determined="infoFile" id="CRC" location="0x20090000"/&gt;
-&lt;peripheralInstance derived_from="GPIO" determined="infoFile" id="GPIO" location="0x20098000"/&gt;
-&lt;peripheralInstance derived_from="EMC" determined="infoFile" id="EMC" location="0x2009c000"/&gt;
-&lt;peripheralInstance derived_from="WWDT" determined="infoFile" id="WWDT" location="0x40000000"/&gt;
-&lt;peripheralInstance derived_from="TIMER0" determined="infoFile" id="TIMER0" location="0x40004000"/&gt;
-&lt;peripheralInstance derived_from="TIMER1" determined="infoFile" id="TIMER1" location="0x40008000"/&gt;
-&lt;peripheralInstance derived_from="UART0" determined="infoFile" id="UART0" location="0x4000c000"/&gt;
-&lt;peripheralInstance derived_from="UART1" determined="infoFile" id="UART1" location="0x40010000"/&gt;
-&lt;peripheralInstance derived_from="PWM0" determined="infoFile" id="PWM0" location="0x40014000"/&gt;
-&lt;peripheralInstance derived_from="PWM1" determined="infoFile" id="PWM1" location="0x40018000"/&gt;
-&lt;peripheralInstance derived_from="I2C0" determined="infoFile" id="I2C0" location="0x4001c000"/&gt;
-&lt;peripheralInstance derived_from="RTC" determined="infoFile" id="RTC" location="0x40024000"/&gt;
-&lt;peripheralInstance derived_from="GPIOINT" determined="infoFile" id="GPIOINT" location="0x40028080"/&gt;
-&lt;peripheralInstance derived_from="IOCON" determined="infoFile" id="IOCON" location="0x4002c000"/&gt;
-&lt;peripheralInstance derived_from="SSP1" determined="infoFile" id="SSP1" location="0x40030000"/&gt;
-&lt;peripheralInstance derived_from="ADC" determined="infoFile" id="ADC" location="0x40034000"/&gt;
-&lt;peripheralInstance derived_from="CANAFRAM" determined="infoFile" id="CANAFRAM" location="0x40038000"/&gt;
-&lt;peripheralInstance derived_from="CANAF" determined="infoFile" id="CANAF" location="0x4003c000"/&gt;
-&lt;peripheralInstance derived_from="CCAN" determined="infoFile" id="CCAN" location="0x40040000"/&gt;
-&lt;peripheralInstance derived_from="CAN1" determined="infoFile" id="CAN1" location="0x40044000"/&gt;
-&lt;peripheralInstance derived_from="CAN2" determined="infoFile" id="CAN2" location="0x40048000"/&gt;
-&lt;peripheralInstance derived_from="I2C1" determined="infoFile" id="I2C1" location="0x4005c000"/&gt;
-&lt;peripheralInstance derived_from="SSP0" determined="infoFile" id="SSP0" location="0x40088000"/&gt;
-&lt;peripheralInstance derived_from="DAC" determined="infoFile" id="DAC" location="0x4008c000"/&gt;
-&lt;peripheralInstance derived_from="TIMER2" determined="infoFile" id="TIMER2" location="0x40090000"/&gt;
-&lt;peripheralInstance derived_from="TIMER3" determined="infoFile" id="TIMER3" location="0x40094000"/&gt;
-&lt;peripheralInstance derived_from="UART2" determined="infoFile" id="UART2" location="0x40098000"/&gt;
-&lt;peripheralInstance derived_from="UART3" determined="infoFile" id="UART3" location="0x4009c000"/&gt;
-&lt;peripheralInstance derived_from="I2C2" determined="infoFile" id="I2C2" location="0x400a0000"/&gt;
-&lt;peripheralInstance derived_from="UART4" determined="infoFile" id="UART4" location="0x400a4000"/&gt;
-&lt;peripheralInstance derived_from="I2S" determined="infoFile" id="I2S" location="0x400a8000"/&gt;
-&lt;peripheralInstance derived_from="SSP2" determined="infoFile" id="SSP2" location="0x400ac000"/&gt;
-&lt;peripheralInstance derived_from="MCPWM" determined="infoFile" id="MCPWM" location="0x400b8000"/&gt;
-&lt;peripheralInstance derived_from="SDMMC" determined="infoFile" id="SDMMC" location="0x400c0000"/&gt;
-&lt;peripheralInstance derived_from="SYSCON" determined="infoFile" id="SYSCON" location="0x400fc000"/&gt;
+&lt;peripheralInstance derived_from="V7M_MPU" id="MPU" location="0xe000ed90"/&gt;
+&lt;peripheralInstance derived_from="V7M_NVIC" id="NVIC" location="0xe000e000"/&gt;
+&lt;peripheralInstance derived_from="V7M_DCR" id="DCR" location="0xe000edf0"/&gt;
+&lt;peripheralInstance derived_from="V7M_ITM" id="ITM" location="0xe0000000"/&gt;
+&lt;peripheralInstance derived_from="FLASHCTRL" id="FLASHCTRL" location="0x200000"/&gt;
+&lt;peripheralInstance derived_from="GPDMA" id="GPDMA" location="0x20080000"/&gt;
+&lt;peripheralInstance derived_from="LCD" id="LCD" location="0x20088000"/&gt;
+&lt;peripheralInstance derived_from="USB" id="USB" location="0x2008c000"/&gt;
+&lt;peripheralInstance derived_from="CRC" id="CRC" location="0x20090000"/&gt;
+&lt;peripheralInstance derived_from="GPIO" id="GPIO" location="0x20098000"/&gt;
+&lt;peripheralInstance derived_from="EMC" id="EMC" location="0x2009c000"/&gt;
+&lt;peripheralInstance derived_from="WWDT" id="WWDT" location="0x40000000"/&gt;
+&lt;peripheralInstance derived_from="TIMER0" id="TIMER0" location="0x40004000"/&gt;
+&lt;peripheralInstance derived_from="TIMER1" id="TIMER1" location="0x40008000"/&gt;
+&lt;peripheralInstance derived_from="UART0" id="UART0" location="0x4000c000"/&gt;
+&lt;peripheralInstance derived_from="UART1" id="UART1" location="0x40010000"/&gt;
+&lt;peripheralInstance derived_from="PWM0" id="PWM0" location="0x40014000"/&gt;
+&lt;peripheralInstance derived_from="PWM1" id="PWM1" location="0x40018000"/&gt;
+&lt;peripheralInstance derived_from="I2C0" id="I2C0" location="0x4001c000"/&gt;
+&lt;peripheralInstance derived_from="RTC" id="RTC" location="0x40024000"/&gt;
+&lt;peripheralInstance derived_from="GPIOINT" id="GPIOINT" location="0x40028080"/&gt;
+&lt;peripheralInstance derived_from="IOCON" id="IOCON" location="0x4002c000"/&gt;
+&lt;peripheralInstance derived_from="SSP1" id="SSP1" location="0x40030000"/&gt;
+&lt;peripheralInstance derived_from="ADC" id="ADC" location="0x40034000"/&gt;
+&lt;peripheralInstance derived_from="CANAFRAM" id="CANAFRAM" location="0x40038000"/&gt;
+&lt;peripheralInstance derived_from="CANAF" id="CANAF" location="0x4003c000"/&gt;
+&lt;peripheralInstance derived_from="CCAN" id="CCAN" location="0x40040000"/&gt;
+&lt;peripheralInstance derived_from="CAN1" id="CAN1" location="0x40044000"/&gt;
+&lt;peripheralInstance derived_from="CAN2" id="CAN2" location="0x40048000"/&gt;
+&lt;peripheralInstance derived_from="I2C1" id="I2C1" location="0x4005c000"/&gt;
+&lt;peripheralInstance derived_from="SSP0" id="SSP0" location="0x40088000"/&gt;
+&lt;peripheralInstance derived_from="DAC" id="DAC" location="0x4008c000"/&gt;
+&lt;peripheralInstance derived_from="TIMER2" id="TIMER2" location="0x40090000"/&gt;
+&lt;peripheralInstance derived_from="TIMER3" id="TIMER3" location="0x40094000"/&gt;
+&lt;peripheralInstance derived_from="UART2" id="UART2" location="0x40098000"/&gt;
+&lt;peripheralInstance derived_from="UART3" id="UART3" location="0x4009c000"/&gt;
+&lt;peripheralInstance derived_from="I2C2" id="I2C2" location="0x400a0000"/&gt;
+&lt;peripheralInstance derived_from="UART4" id="UART4" location="0x400a4000"/&gt;
+&lt;peripheralInstance derived_from="I2S" id="I2S" location="0x400a8000"/&gt;
+&lt;peripheralInstance derived_from="SSP2" id="SSP2" location="0x400ac000"/&gt;
+&lt;peripheralInstance derived_from="MCPWM" id="MCPWM" location="0x400b8000"/&gt;
+&lt;peripheralInstance derived_from="SDMMC" id="SDMMC" location="0x400c0000"/&gt;
+&lt;peripheralInstance derived_from="SYSCON" id="SYSCON" location="0x400fc000"/&gt;
 &lt;/chip&gt;
 &lt;processor&gt;&lt;name gcc_name="cortex-m3"&gt;Cortex-M3&lt;/name&gt;
 &lt;family&gt;Cortex-M&lt;/family&gt;
