--- a/sw/.cproject
+++ b/sw/.cproject
@@ -38,6 +38,7 @@
 						<entry excluding="ui|network" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src/network"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src/ui"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="uw_can"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
