--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "sw/hal"]
 	path = sw/hal
 	url = ssh://u33867@sftp.shellit.org/home/u33867/version_control/public/hal
+[submodule "sw/--force"]
+	path = sw/--force
+	url = ssh://u33867@sftp.shellit.org/home/u33867/version_control/uw/uw_can
+[submodule "sw/uw_can"]
+	path = sw/uw_can
+	url = ssh://u33867@sftp.shellit.org/home/u33867/version_control/uw/uw_can
